--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "test": "__tests__"
   },
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cover": "jest --coverage",
+    "test": "cross-env NODE_ENV=test jest",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
+    "test:cover": "cross-env NODE_ENV=test jest --coverage",
     "lint": "eslint \"src/**/*.js\"",
     "start": "parcel ./src/index.html",
     "start:dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/index.js"
@@ -44,6 +44,7 @@
     "mongoose": "^5.9.12",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^2.2.1",
+    "randomstring": "^1.1.5",
     "supertest": "^4.0.2",
     "uuid": "^8.0.0"
   },
