--- a/.env.example
+++ b/.env.example
@@ -7,10 +7,7 @@ DEVELOPMENT_DATABASE_URL=
 TEST_DATABASE_URL=
 PRODUCTION_DATABASE_URL=
 
-MAIL_FROM=
-MAIL_PORT=
-MAIL_HOST=
-MAIL_USERNAME=
+MAIL_USER=
 MAIL_PASSWORD=
 
 JWT_SECRET=
