--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "boilerplate"
   ],
   "private": false,
-  "main": "src/index.js",
-  "types": "src/index.d.ts",
+  "main": "./src/index.js",
+  "types": "./src/index.d.ts",
   "directories": {
     "test": "__tests__"
   },
   "scripts": {
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel -d ./build ./src -s",
+    "build": "npm run clean && npm run build-babel",
     "test": "cross-env NODE_ENV=test jest",
     "test:watch": "cross-env NODE_ENV=test jest --watch",
     "test:cover": "cross-env NODE_ENV=test jest --coverage",
     "lint": "eslint \"src/**/*.js\"",
-    "start": "node ./src/index.js",
+    "start": "npm run build && node ./build/index.js",
     "start:dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/index.js"
   },
   "author": {
@@ -34,6 +37,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@babel/cli": "^7.10.0",
     "@sendgrid/mail": "^7.1.1",
     "bcrypt": "^4.0.1",
     "chalk": "^4.0.0",
