feat: Users should be able to create profile
- Created validator for  creating profile

- Created profile creation method in the profile controller

- Wrote unit test for validators,  and controllers

Delivers #7

--- a/.env-example
+++ b/.env-example
@@ -10,4 +10,7 @@ PRODUCTION_DATABASE_URL=
 MAIL_USER=
 MAIL_PASSWORD=
 
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
 JWT_SECRET=
